--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,44 +2,29 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "CommonJS",
+
     "lib": ["ES2020", "DOM"],
+
     "rootDir": "src",
     "outDir": "dist",
+
     "strict": true,
 
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "types": ["node"],
+
+    /*
+     * 👉  Jest & Node types – so TS knows about global `describe`, `it`, etc.
+     */
+    "types": ["node", "jest"],
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]                     // <-- single catch-all alias
+      "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts"]
+
+  "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
