--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "wanderlust-api",
   "type": "commonjs",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
+    "dev":   "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
     "build": "tsc -p .",
     "start": "node dist/server.js",
-    "test": "NODE_ENV=test jest --runInBand"
+    "test":  "NODE_ENV=test jest --runInBand",
+
+    "models": "ts-node -r tsconfig-paths/register scripts/show-models.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
@@ -39,8 +41,10 @@
     "prisma": "^6.10.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",          
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
+
