--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "wanderlust-api",
   "type": "commonjs",
   "scripts": {
-    "dev":   "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
     "build": "tsc -p .",
     "start": "node dist/server.js",
-    "test":  "NODE_ENV=test jest --runInBand",
-
-    "models": "ts-node -r tsconfig-paths/register scripts/show-models.ts"
+    "test": "NODE_ENV=test jest --runInBand",
+    "models": "ts-node -r tsconfig-paths/register scripts/show-models.ts",
+    "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "5.1.0",
+    "express-list-endpoints": "^7.1.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "openapi-types": "^12.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
@@ -41,10 +43,9 @@
     "prisma": "^6.10.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
-    "ts-node": "^10.9.2",          
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
-
